# spectral

./: .gitignore  CHANGELOG.md  CLAUDE.md  MCP.md  README.md  ROADMAP.md  install.sh  pyproject.toml
.github/workflows/: publish-pypi.yml  release.yml
cli/: main.py
cli/commands/: completion.py  config.py
cli/commands/analyze/: cmd.py  utils.py
cli/commands/android/: __init__.py  cert.py  cmd.py  install.py  list.py  patch.py  pull.py  replace.py  uninstall.py
cli/commands/android/external_tools/: __init__.py  adb.py  apktool.py  subprocess.py  uber_signer.py
cli/commands/auth/: analyze.py  auth_framework.py  cmd.py  extract.py  login.py  logout.py  refresh.py  set.py
cli/commands/capture/: _mitm_gql_injection.py  _mitmproxy.py  _wireguard.py  cmd.py  discover.py  inspect.py  list.py  proxy.py  show.py  types.py
cli/commands/catalog/: __init__.py  publish.py  search.py
cli/commands/extension/: cmd.py  host.py  manifest.py
cli/commands/graphql/: analyze_cmd.py  cmd.py
cli/commands/mcp/: __init__.py  analyze.py  auth.py  build_tool.py  cmd.py  identify.py  investigation.py  migrate.py  request.py  server.py  types.py
cli/commands/openapi/: analyze_cmd.py  cmd.py
cli/completions/: spectral.bash  spectral.zsh
cli/formats/: app_meta.py  capture_bundle.py  config.py  mcp_tool.py
cli/helpers/: auth_framework.py  auth_runtime.py  completions.py  context.py  correlator.py  detect_base_url.py  http.py  llm.py  llm_tools.py  schemas.py  storage.py  ui.py
cli/helpers/auth/: generation.py  runtime.py  usage.py
cli/helpers/json/: __init__.py  _schema_analysis.py  _serialization.py  _simplification.py  schema_inference.py  serialization.py  simplification.py
cli/helpers/llm/: __init__.py  _client.py  _conversation.py  _cost.py  _debug.py  _utils.py
cli/helpers/schema/: __init__.py  _params.py  _query.py  _scalars.py  _schema_analysis.py  _schema_inference.py
cli/prompts/: auth-fix-initial.j2  auth-fix.j2  auth-generate-script.j2  auth-instructions.j2  detect-base-urls.j2  mcp-build-tool-instructions.j2  mcp-build-tool-user.j2  mcp-identify-instructions.j2  mcp-identify-user.j2
demo/: add_chrome.py  demo.cast  generate_cast.py  render.sh
documentation/: bundle-format.md  index.md
documentation/analyze/: auth-detection.md  pipeline-overview.md  rest-output.md
documentation/capture/: android.md  chrome-extension.md
documentation/getting-started/: calling-the-api.md  first-analysis.md  first-capture.md
documentation/reference/: cli.md
extension/: manifest.json
extension/background/: auth.js  background.js  capture.js  native.js  network.js  state.js  utils.js
extension/popup/: auth.js  capture.js  popup.html  popup.js
scripts/: seed_demo_app.py
tests/: conftest.py  test_completion.py
tests/android/: test_adb.py  test_cmd.py  test_patch.py  test_subprocess.py
tests/auth/: test_commands.py  test_extract.py  test_login.py  test_usage.py
tests/capture/: test_proxy.py
tests/catalog/: test_commands.py
tests/cli/: test_commands.py
tests/commands/extension/: test_host.py
tests/e2e/: client.py  conftest.py  server.py  test_pipeline.py
tests/formats/: test_mcp_tool.py
tests/helpers/: test_auth_framework.py  test_correlator.py  test_detect_base_url.py  test_json.py  test_llm.py  test_llm_tools.py  test_openrouter.py  test_prompt.py  test_schemas.py  test_storage.py  test_tools.py
tests/mcp/: test_build_tool.py  test_identify.py  test_investigation.py  test_migrate.py  test_pipeline.py  test_request.py  test_server.py
tests/openapi/analyze/: test_assemble.py  test_enrich.py  test_extraction.py
(+30 files in other folders)
