[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spectral"
version = "0.1.0"
description = "Automatically discover and document web application APIs"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "pydantic>=2.0",
    "anthropic>=0.40",
    "pyyaml>=6.0",
    "rich>=13.0",
    "requests>=2.28",
    "mitmproxy>=11.0.2",
    "graphql-core>=3.2",
    "compact-json>=1.8.2",
    "mcp>=1.0",
    "jq>=1.11.0",
    "jinja2>=3.1",
]

[project.scripts]
spectral = "cli.main:cli"

[tool.setuptools.packages.find]
include = ["cli*"]

[tool.setuptools.package-data]
"cli" = ["prompts/*.j2", "completions/*"]

[project.optional-dependencies]
android = [
    "mitmproxy>=11.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "mkdocs<2",
    "mkdocs-material>=9.7.2",
    "pyright>=1.1.408",
    "ruff>=0.15.1",
]

[tool.ruff.lint]
select = ["I"]

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
